[package]
name = "nexus_client_worker"
version = "1.0.0"
edition = "2024"

[[bin]]
name = "nexus_client_worker" # 二进制输出名称
path = "src/main.rs"


[dependencies]
nexus-sdk = { git = "https://github.com/nexus-xyz/nexus-zkvm", tag = "0.3.4" }
postcard = "1.0.10"
prost = "0.13"
prost-types = "0.13.5"
ed25519-dalek = { version = "2", features = ["rand_core"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
sysinfo = "0.33.1"
cfg-if = "1.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = { version = "1.0.138" }
thiserror = "2.0.12"
async-trait = "0.1.88"
urlencoding = "2.1.3"
tokio = { version = "1.38", features = ["full"] }
rand = "0.8.5"
hex = "0.4"  # 添加 hex 依赖
sha3 = "0.10"
base64 = "0.21"
anyhow = "1.0"
mimalloc = "0.1"
log = "0.4"
env_logger = "0.10" # 可选，用于日志记录
chrono = "0.4"      # 用于本地时间处理
serde_yaml = "0.9"
mac_address = "1.1.5"
uuid = { version = "1.0", features = ["v4"] }
systemstat = "0.2.0"
rayon = "1.9"
num_cpus = "1.14"  # 用于获取逻辑核心数


[dev-dependencies]
assert_cmd = "2"
async-trait = "0.1.88"
mockall = "0.12"